logo bugs on mobile

--- a/public/responsive.css
+++ b/public/responsive.css
@@ -23,6 +23,10 @@
         width: 80vw;
     }
 
+    .work-ornament {
+        display: none;
+    }
+
 }
 
 @media only screen and (max-width: 820px) {
